# siu

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-audit.yml  rust-ci.yml
docs/: astro.config.mjs  package.json  pnpm-lock.yaml
docs/guides/: getting-started.md
docs/src/content/docs/: index.mdx
migrations/2023-06-19-114258_create_projects/: up.sql
migrations/2023-06-19-114327_create_project_progresses/: down.sql  up.sql
src/: cli.rs  db.rs  diff.rs  main.rs  models.rs  projects.rs  schema.rs  shell.rs  tools.rs
src/cli/: normal.rs  setting_up.rs  tui.rs
src/tools/: chezmoi.rs  homebrew.rs  java11.rs  node.rs  pnpm.rs  rbenv.rs  tool.rs  types.rs  yarn.rs
website/: .prettierrc  docusaurus.config.js  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
website-old/: pnpm-lock.yaml
website-old/docs/: configuration.md
website/blog/: authors.yml
website/docs/: intro.md
website/docs/guides/: getting-started.mdx
website/docs/reference/: configuration.mdx
website/docs/supported-tools/: _category_.json  homebrew.md
website/src/: app.html  app.postcss
website/src/components/HomepageFeatures/: index.tsx
website/src/lib/: FeatureCard.svelte  NavLink.svelte
website/src/pages/: index.tsx
website/src/routes/: +layout.svelte  +page.svelte
website/src/routes/docs/: +layout.server.ts  +layout.svelte  SidebarNode.svelte  types.ts
website/src/routes/docs/[...slug]/: +page.server.ts  +page.svelte  +page.ts
