[package]
name = "smu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
crossterm = "0.26.1"
home = "0.5.5"
ratatui = { version = "0.21.0", features = ["all-widgets"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
