[package]
name = "smu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
home = "0.5.5"
owo-colors = "3.5.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
walkdir = "2.3.3"
rusqlite = { version = "0.29.0", features = ["bundled"] }
