[package]
name = "smu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
home = "0.5.5"
owo-colors = "3.5.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
walkdir = "2.3.3"
diesel = { version = "2.1.0", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
] }
dialoguer = { version = "0.10.4" }
difference = "2.0"
url = "2.4.0"
reqwest = "0.11.18"
tokio = { version = "1", features = ["full"] }
